objects/EUR_CRM_Answer_Value__c.object
<CustomObject>
    <description>PREU Data Model</description>
    <fields>
        <fullName>EUR_CRM_Question__c</fullName>
        <label>Question</label>
        <referenceTo>EUR_CRM_Question__c</referenceTo>
        <relationshipName>Question_Values</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Answer Value (EU)</label>
    <listViews>
        <fullName>All_BE_Answer_Values</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_Question__c</columns>
        <columns>EUR_CRM_Sequence__c</columns>
        <columns>EUR_CRM_Value__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Answer_Value__c.EUR_BE_Answer_Value</value>
        </filters>
        <label>All BE Answer Values</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>AVN-{00000000}</displayFormat>
        <label>Answer Value Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Answer Value (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_BE_Answer_Value</fullName>
        <active>true</active>
        <label>EUR BE Answer Value</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_Answer_Value</fullName>
        <active>true</active>
        <label>EUR BG Answer Value</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CRM_DE_Answer_Value</fullName>
        <active>true</active>
        <label>DE Answer Value</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_Answer_Value</fullName>
        <active>true</active>
        <description>Record Type for DK Answer Values</description>
        <label>EUR DK Answer Value</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_FI_Answer_Value</fullName>
        <active>true</active>
        <label>EUR FI Answer Value</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_Answer_Value</fullName>
        <active>true</active>
        <label>EUR RU Answer Value</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ZA_Answer_Value</fullName>
        <active>true</active>
        <label>EUR ZA Answer Value</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>